// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-authenticator spec: Render logic -> should render a \`forgot password\` by passing \`forgotpassword\` into state prop 1`] = `
<amplify-authenticator state="forgotpassword">
  <div>
    <div>
      Forgot Password Component
    </div>
  </div>
</amplify-authenticator>
`;

exports[`amplify-authenticator spec: Render logic -> should render a \`sign in\` by default 1`] = `
<amplify-authenticator>
  <div>
    <amplify-sign-in></amplify-sign-in>
  </div>
</amplify-authenticator>
`;

exports[`amplify-authenticator spec: Render logic -> should render a \`sign up\` by passing \`signup\` into state prop 1`] = `
<amplify-authenticator state="signup">
  <div>
    <div>
      Sign Up Component
    </div>
  </div>
</amplify-authenticator>
`;
